--- a/percept_exp2.ipynb
+++ b/percept_exp2.ipynb
@@ -112,7 +112,7 @@
     "                \n",
     "                break\n",
     "            \n",
-    "            #for j in list_false:       #all the content change at the time, does not work. one by one works\n",
+    "            #for j in list_false:       # stochastic\n",
     "                \n",
     "            #    self.w=self.w+learning_rate*y[j]*x[j]\n",
     "            #    self.b=self.b+learning_rate**y[j]*1\n",
