--- a/percept_exp3.ipynb
+++ b/percept_exp3.ipynb
@@ -72,7 +72,7 @@
     "import matplotlib.pyplot as plt\n",
     "from get_data import fig_data,xor_data,donut_data\n",
     "\n",
-    "############################  using cost function\n",
+    "############################  using cost function batch gradient descent\n",
     "\n",
     "def get__data():\n",
     "\n",
